crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__whitespace__parse_with_leading_whitespace.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: nodelist
---
nodes:
  - Text:
      content: hello
      span:
        start: 5
        length: 5
line_offsets:
  - 0
