crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__whitespace__parse_with_leading_whitespace_newline.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Text:
      content: hello
      span:
        start: 6
        length: 5
line_offsets:
  - 0
  - 1
