crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__whitespace__parse_with_trailing_whitespace_newline.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: nodelist
---
nodes:
  - Text:
      content: hello
      span:
        start: 0
        length: 5
line_offsets:
  - 0
  - 11
